# testcontainers-hs

./: .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  cabal.project  stack.yaml  testcontainer-hs.cabal  testcontainers.cabal
.github/workflows/: ci.yaml  lint.yaml
src/: TestContainer.hs  TestContainers.hs
src/TestContainer/: Docker.hs  Image.hs  Tasty.hs
src/TestContainers/: AesonCompat.hs  Config.hs  Docker.hs  Docker.hs-boot  Hspec.hs  Image.hs  Monad.hs  Tasty.hs  Trace.hs  Tracer.hs
src/TestContainers/Docker/: Container.hs  Internal.hs  JSON.hs  Network.hs  Reaper.hs  State.hs
test/: Driver.hs
test/TestContainer/: Tests.hs
test/TestContainers/: HspecSpec.hs  TastySpec.hs  Tests.hs
test/data/: init-script.sql
