cabal-version:       >=1.10
name:                testcontainers
version:             0.1.0.0
synopsis:            Docker containers for your integration tests.
description:         testcontainers is a Haskell library that provides a friendly API to
                     run Docker containers. It is designed to create a runtime environment
                     to use during your integration tests
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Alex Biehl
maintainer:          alex.biehl@target.com
copyright:           2020 Alex Biehl
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/alexbiehl/testcontainers-hs

library
  exposed-modules:     TestContainers
                       TestContainers.Docker
                       TestContainers.Hspec
                       TestContainers.Image
                       TestContainers.Tasty

  -- other-modules:
  -- other-extensions:
  build-depends:       aeson,
                       base >=4.12 && <5,
                       bytestring,
                       exceptions,
                       hspec >=2.7.1 && <2.8,
                       lens,
                       lens-aeson,
                       network,
                       process,
                       resourcet,
                       tasty,
                       text,
                       unliftio-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  other-modules:       TestContainers.HspecSpec
                       TestContainers.TastySpec
  build-tool-depends:  hspec-discover:hspec-discover,
                       tasty-discover:tasty-discover
  build-depends:       base,
                       hspec,
                       tasty,
                       tasty-discover >=4.2.1 && <4.3,
                       tasty-hunit,
                       tasty-hspec,
                       testcontainers,
                       text
