cabal-version:       >=1.10
name:                testcontainers
version:             0.3.1.0
synopsis:            Docker containers for your integration tests.
description:         testcontainers is a Haskell library that provides a friendly API to
                     run Docker containers. It is designed to create a runtime environment
                     to use during your integration tests
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Alex Biehl
maintainer:          alex.biehl@target.com
copyright:           2020 Alex Biehl
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md,
                     README.md

source-repository head
  type: git
  location: https://github.com/alexbiehl/testcontainers-hs

library
  exposed-modules:     TestContainers
                       TestContainers.Docker
                       TestContainers.Hspec
                       TestContainers.Image
                       TestContainers.Tasty

  -- other-modules:
  -- other-extensions:
  build-depends:       base                 >=4.12 && <5,
                       aeson                >= 1.4.6 && < 1.6 || >= 2.0 && < 2.1,
                       aeson-optics         >= 1.1 && < 1.2,
                       bytestring           >= 0.10.8 && < 0.12,
                       text                 >= 1.2.3 && < 1.3 || >= 2.0 && < 2.1,
                       exceptions           >= 0.10.4 && < 0.11,
                       optics-core          >= 0.1 && < 0.5,
                       process              >= 1.6.5 && < 1.7,
                       network              >= 2.8.0 && < 3.2,
                       mtl                  >= 2.2.2 && < 2.3,
                       resourcet            >= 1.2.4 && < 1.3,
                       unliftio-core        >= 0.1.0 && < 0.3,
                       tasty                >= 1.0   && < 1.5

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  other-modules:       TestContainers.HspecSpec
                       TestContainers.TastySpec
  build-tool-depends:  hspec-discover:hspec-discover,
                       tasty-discover:tasty-discover
  build-depends:       base,
                       hspec >= 2.0 && < 3.0,
                       tasty,
                       tasty-discover >=4.2.1 && <4.3,
                       tasty-hunit,
                       tasty-hspec,
                       testcontainers,
                       text
