cabal-version:      >=1.10
name:               testcontainers
version:            0.5.0.0
synopsis:           Docker containers for your integration tests.
description:
  testcontainers is a Haskell library that provides a friendly API to
  run Docker containers. It is designed to create a runtime environment
  to use during your integration tests

-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Alex Biehl
maintainer:         alex.biehl@gmail.com
copyright:          2023 Alex Biehl
category:           Development
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2

source-repository head
  type:     git
  location: https://github.com/testcontainers/testcontainers-hs

library
  exposed-modules:
    TestContainers
    TestContainers.Config
    TestContainers.Docker
    TestContainers.Docker.Internal
    TestContainers.Docker.Network
    TestContainers.Docker.Reaper
    TestContainers.Docker.State
    TestContainers.Hspec
    TestContainers.Image
    TestContainers.Monad
    TestContainers.Tasty
    TestContainers.Trace

  -- other-modules:
  -- other-extensions:
  build-depends:
      aeson          >=1.4.6   && <3
    , aeson-optics   >=1.1     && <2
    , async
    , base           >=4.12    && <5
    , bytestring     >=0.10.8  && <0.12
    , directory      >=1.3.6   && <2
    , exceptions     >=0.10.4  && <0.11
    , http-client    >=0.5.14  && <1
    , http-types     >=0.12.3  && <1
    , mtl            >=2.2.2   && <3
    , network        >=2.8.0   && <3.2
    , optics-core    >=0.1     && <0.5
    , process        >=1.6.5   && <1.7
    , random         >=1.2     && <2
    , resourcet      >=1.2.4   && <1.4
    , tasty          >=1.0     && <1.5
    , text           >=1.2.3   && <3
    , unliftio-core  >=0.1.0   && <0.3

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite tests
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -Wall
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs
  other-modules:
    TestContainers.HspecSpec
    TestContainers.TastySpec

  build-tool-depends:
    hspec-discover:hspec-discover, tasty-discover:tasty-discover

  build-depends:
      base
    , hspec           >=2.0   && <3.0
    , tasty
    , tasty-discover  >=4.2.1 && <4.3
    , tasty-hspec
    , tasty-hunit
    , testcontainers
    , text
